fixed scroll windows on mobile

--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ color:#ffffff;
   margin: 4px auto;
   width: 100%;
   max-width: 95%;
-  height: 460px;
+  height: 510px;
 }
 }
 
